<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#20673AB7"
    android:orientation="vertical">

    <EditText
        android:id="@+id/activity_formulario_aluno_nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/nome"
        android:inputType="textCapWords"
        android:textColor="#2D0771"
        android:textColorHighlight="#6519ED"
        android:textColorHint="#8F673AB7"
        android:textColorLink="#673AB7"
        android:autofillHints="" />

    <EditText
        android:id="@+id/activity_formulario_aluno_telefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/telefone"
        android:inputType="phone"
        android:textColor="#2D0771"
        android:textColorHighlight="#6519ED"
        android:textColorHint="#8F673AB7"
        android:textColorLink="#673AB7"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/activity_formulario_aluno_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="#2D0771"
        android:textColorHighlight="#6519ED"
        android:textColorHint="#8F673AB7"
        android:textColorLink="#673AB7"
        android:importantForAutofill="no" />


    <EditText
        android:id="@+id/activity_formulario_aluno_materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="@string/materia"
        android:inputType="text"
        android:textColor="#2D0771"
        android:textColorHighlight="#6519ED"
        android:textColorHint="#8F673AB7"
        android:textColorLink="#673AB7"
        android:importantForAutofill="no" />




</LinearLayout>
</ScrollView>